1. Removed white patch which is occurred due to scrollbar 2. fixes content visibility for resolution of height 800px and less

--- a/src/components/Deposit/Deposit.less
+++ b/src/components/Deposit/Deposit.less
@@ -7,7 +7,9 @@
 .depositComponent {
   padding: 30px 0;
   @media screen and (max-height: 800px){
-    overflow: scroll;
+    overflow-y: scroll;
+    display: block !important;
+    padding-top: 20px;
   }
   h2 {
     padding: 30px 0;
@@ -43,6 +45,7 @@
   }
   .wrapper {
     width:980px;
+    margin: 0 auto;
   }
   .vertical-divider {
     position: absolute;
